--- a/app/views/main.css
+++ b/app/views/main.css
@@ -1,5 +1,8 @@
 page {
     background-image: url('~/images/splash.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 label {
