Added a simple game object and renamed the splash.png

--- a/app/views/main.css
+++ b/app/views/main.css
@@ -1,5 +1,5 @@
 page {
-    background-image: url('~/images/splash.png');
+    background-image: url('~/images/main.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
