--- a/app/views/menu.xml
+++ b/app/views/menu.xml
@@ -1,10 +1,10 @@
-<Page>
+<Page loaded="onLoaded">
     <GridLayout columns="*, *" rows="*, *, *, auto">
         <Button col="0" row="0" text="Junkyard" tap="onJunkyardTap" />
         <Button col="1" row="0" text="Store" tap="onStoreTap" />
         <Button col="0" row="1" text="Garage" tap="onGarageTap" />
         <Button col="1" row="1" text="Map" tap="onMapTap" />
         <Button col="0" row="2" colSpan="2" text="Supplier" tap="onSupplierTap" />
-        <Label col="0" row="3" colSpan="2" text="$1000"></Label>
+        <Label col="0" row="3" colSpan="2" text="{{Money}}"></Label>
     </GridLayout>
 </Page>
